--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.1",
+    "@mui/styled-engine-sc": "^6.2.1",
+    "@mui/x-data-grid": "^7.23.3",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
@@ -20,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.22.1",
+    "styled-components": "^6.1.13",
     "tailwindcss": "3.3.2"
   }
 }
