--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "next-auth": "^4.24.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.22.1",
-    "styled-components": "^6.1.13",
+    "styled-components": "^6.1.14",
     "tailwindcss": "3.3.2"
   }
 }
