--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^7.3.0",
     "next": "13.4.6",
     "next-auth": "^4.24.6",
+    "papaparse": "^5.5.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-data-table-component": "^7.6.2",
