--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "lucide-react": "^0.471.1",
     "mongoose": "^7.3.0",
     "next": "13.4.6",
     "next-auth": "^4.24.6",
