--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongodbcrud",
+  "name": "optimahr",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.22.1",
+    "react-table": "^7.8.0",
     "styled-components": "^6.1.14",
     "tailwindcss": "3.3.2"
   }
