--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/styled-engine-sc": "^6.2.1",
     "@mui/x-data-grid": "^7.23.3",
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "lucide-react": "^0.471.1",
@@ -24,6 +26,7 @@
     "papaparse": "^5.5.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
