--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/styled-engine-sc": "^6.2.1",
     "@mui/x-data-grid": "^7.23.3",
     "autoprefixer": "10.4.14",
+    "caniuse-lite": "^1.0.30001695",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "eslint": "8.43.0",
